@@ -3,7 +3,7 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=fontforge
-pkgver=20080429
+pkgver=20080607
 pkgrel=1
 pkgdesc="An outline and bitmap font editor"
 arch=('i686' 'x86_64')
@@ -13,13 +13,13 @@ depends=('libxkbui' 'libxi')
 makedepends=('freetype2')
 options=('!libtool' '!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/fontforge/fontforge_full-${pkgver}.tar.bz2)
-md5sums=('ca239de93aeceed08c263333d0e898c8')
-sha1sums=('165c137216fcadca557a5264fc2822f558b0c75a')
+md5sums=('be0739f9ab74555bebbb8acb6e7de519')
+sha1sums=('5c72921bb43556ec0b6c174f07f9406065363feb')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --mandir=/usr/share/man --with-multilayer --with-devicetables --without-python
+  ./configure --prefix=/usr --mandir=/usr/share/man --with-multilayer --with-devicetables --without-python || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
-  install -D -m644 LICENSE ${startdir}/pkg/usr/share/licenses/${pkgname}/LICENSE
+  make DESTDIR=${startdir}/pkg install || return 1
+  install -D -m644 LICENSE ${startdir}/pkg/usr/share/licenses/${pkgname}/LICENSE || return 1
 }
